# Tatodetect

./: CMakeLists.txt  README.md  config.js  licence.txt
ansible/files/: tatodetect.service
ansible/tasks/: install_tatodetect.yml
data/: README
src/: main.cpp  tatodetect.cpp  tatodetect.h
src/contents/: detects.h
src/controllers/apis/: Controller.cpp  Controller.h  Detects.cpp  Detects.h
src/models/: Detects.cpp  Detects.h  SqliteModel.cpp  SqliteModel.h
src/views/api/detects/: simple.tmpl
tools/: generate.py  test.sh
